--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "emailjs": "^4.0.3",
     "emailjs-com": "^3.2.0",
     "gsap": "^3.13.0",
     "react": "^19.1.0",
