--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.0",
+    "react-router-hash-link": "^2.4.3",
     "react-toastify": "^11.0.5",
     "swiper": "^11.2.10",
     "tailwindcss": "^4.1.11"
